--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INTENCE MEDIA - Photography Portfolio</title>
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="static/main.css">
 </head>
 <body>
     <header>
