--- a/index.html
+++ b/index.html
@@ -7,6 +7,348 @@
     <link rel="stylesheet" href="static/main.css">
 </head>
 <body>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Timmana&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap');
+
+
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+
+        header {
+            background: white;
+            color: white;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 97%;
+            height: 100px; /* Adjust the height as needed */
+            position: relative;
+        }
+
+        header img {
+            max-width: 200px;
+            margin-left: 20px; /* Moves the logo to the left */
+        }
+
+        nav {
+            position: absolute;
+            top: 50%; /* Moves the navigation to the middle */
+            left: 50%;
+            transform: translate(-50%, -50%); /* Centers it horizontally and vertically */
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin: 0 20px;
+        }
+
+        nav ul li a {
+            color: black;
+            text-decoration: none;
+            font-size: 40px; /* Keeps the font size large */
+            font-weight: bold;
+            font-family: 'Timmana';
+        }
+
+        .hero {
+            background: url('/static/vk side dark.JPG') center/cover no-repeat;
+            height: 900px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 30px;
+            margin-top: 0px;
+        }
+
+        .hero h2 {
+            font-size: 55px;
+            margin-top: 20px;
+            font-family: 'timmana'
+        }
+
+        #photo-slider {
+            text-align: center;
+            padding: 40px 0;
+        }
+
+        #photo-slider h2{
+            margin-top: -10px;
+        }
+
+        .slider-container {
+            position: relative;
+            width: 70%;
+            margin: auto;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .slider-wrapper {
+            display: flex;
+            overflow: hidden;
+            width: auto;
+        }
+
+        .slider {
+            display: inline-flex;
+            transition: transform 0.5s ease-in-out;
+            gap: 20px;
+        }
+
+        .slider img {
+            width: 100%;
+            height: auto;  /* Maintains aspect ratio */
+            object-fit: cover; /* Ensures the image covers the container without stretching */
+            flex-shrink: 0;
+            border-radius: 8px;
+        }
+
+        /* Arrow button styles */
+        .arrow {
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            z-index: 10;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .prev {
+            left: 10px;
+        }
+
+        .next {
+            right: 10px;
+        }
+
+
+        #portfolio, #about, #contact, #extra-images {
+            text-align: center;
+            padding: 40px;
+        }
+
+
+        #portfolio, #about p{
+            font-size: 18px;
+            line-height: 1.6;
+            color: #555;
+        }
+
+        #portfolio h2{
+            font-size: 50px;
+        }
+
+        .extra-images {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap; /* Allow images to wrap to the next line */
+        }
+
+        .extra-images img {
+            width: auto;  /* Allow the image to scale based on its original aspect ratio */
+            height: 300px;  /* Set a consistent height for all images */
+            max-width: 100%;  /* Ensure the image doesn't overflow the container */
+            object-fit: contain;  /* Prevent cropping, keep image within bounds */
+            border-radius: 8px;
+        }
+
+        #contact {
+            background: #222; 
+            color: #ff007f; 
+            padding: 60px 10%;
+            display: flex;
+            justify-content: center;
+        }
+
+        .contact-container {
+            display: flex;
+            background: #333;
+            padding: 40px;
+            border-radius: 10px;
+            max-width: 900px;
+            width: 100%;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        .contact-left {
+            width: 40%;
+            text-align: left;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start; /* Aligns everything to the top */
+        }
+
+        .contact-left h2 {
+            font-size: 28px;
+            font-weight: bold;
+            margin-bottom: 10px; /* Keeps space below the heading */
+        }
+
+        .contact-left p {
+            font-size: 15px;
+            color: #aaa;
+            margin-top: 0px; /* Removes extra spacing */
+            max-width: 100%; /* Prevents it from stretching too wide */
+            align-self: flex-start; /* Forces text to stay on the left side */
+            margin-left: 0px;
+        }
+
+        .contact-right {
+            width: 60%;
+        }
+
+
+        /* Add this to your /static/main.css */
+        .contact-left h2 {
+            position: relative;
+            display: inline-block;
+        }
+
+        .contact-left h2::after {
+            content: '';
+            display: block;
+            width: 100px; /* Adjust the length of the line */
+            height: 7px; /* Line thickness */
+            background-color: #ff007f;
+            margin-top: 10px; /* Space between text and line */
+            margin-left: 0px;
+            margin-right: auto;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        input, textarea {
+            background: transparent; /* Keeps the background transparent */
+            border: none;
+            border-bottom: 1px solid #555;
+            padding: 10px;
+            margin-bottom: 15px;
+            color: #fff;
+            width: 100%;
+            font-size: 16px;
+            font-family: 'Yanone Kaffeesatz', sans-serif; /* Consistent font */
+        }
+
+        /* Prevent the background from changing when focusing */
+        input:focus, textarea:focus {
+            background: transparent !important; /* Ensures the background stays transparent when focused */
+            outline: none; /* Removes the default blue outline */
+            border-bottom: 1px solid #ff007f; /* Optional: Add a custom border color for focus */
+        }
+
+
+        textarea {
+            height: 80px;
+        }
+
+        .form-buttons {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .cancel, .send {
+            background: none;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .cancel {
+            color: #888;
+        }
+
+        .send {
+            color: #ff007f;
+            font-weight: bold;
+        }
+
+        footer {
+            background: #000;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+            margin-top: 20px;
+        }
+
+        h1 {
+            font-size: 50px;
+        }
+
+        h2 {
+            font-size: 40px;
+        }
+
+        section p{
+            margin-left: 200px;
+            margin-right: 200px;
+        }
+
+
+        #info-section {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 50px;
+            background-color: #fff; /* White background to keep it clean */
+        }
+
+        .info-text {
+            flex: 1;
+            padding: 20px;
+            text-align: left;
+        }
+
+        .info-text h2 {
+            font-size: 45px;
+            margin-bottom: 40px;
+            margin-top: -270px;
+            margin-left: 50px;
+            margin-right: 300;
+        }
+
+        .info-text p {
+            font-size: 18px;
+            line-height: 1.6;
+            color: #555;
+            margin-left: 50px;
+            margin-right: 300px;
+        }
+
+        .info-image {
+            flex: 1;
+            text-align: center;
+        }
+
+        .info-image img {
+            max-width: 70%;
+            max-height: 600px;
+            border-radius: 10px; /* Adds rounded corners for a softer look */
+        }
+    </style>
     <header>
         <img src="/static/INTEC MEDIA1.png" alt="INTENCE MEDIA Logo">
         <nav>
