--- a/album_car.html
+++ b/album_car.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Album - INTENCE MEDIA</title>
-    <link rel="stylesheet" href="/static/main.css">
+    <title>Cars Album - INTENCE MEDIA</title>
+    <link rel="stylesheet" href="static/main.css">
 </head>
 <body>
     <header>
-        <img src="/static/INTEC MEDIA1.png" alt="INTENCE MEDIA Logo">
+        <a href="https://scaling-sniffle-v6g7g44j5wpqfp65w-8080.app.github.dev/">
+            <img src="/static/INTEC MEDIA1.png" alt="INTENCE MEDIA Logo">
+        </a>
         <nav>
             <ul>
                 <li><a href="#portfolio">Portfolio</a></li>
@@ -23,14 +25,9 @@
         <h2>Cars Album</h2>
         <div class="album-images">
             <!-- Add images for the car album -->
-            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719568/GM_SHOW_13_ftmwgs.jpg" alt="Car 1">
-            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719630/GM_SHOW_49_lde1ge.jpg" alt="Car 2">
-            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_28_qhftgm.jpg" alt="Car 3">
-            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_16_gesayy.jpg" alt="Car 3">
-            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719610/GM_SHOW_18_rgfgfg.jpg" alt="Car 3">
-            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_43_dgwi4p.jpg" alt="Car 3">
-            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719608/GM_SHOW_20_vam9uh.jpg" alt="Car 3">
-            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719608/GM_SHOW_30_iooyn6.jpg" alt="Car 3">
+            <img src="https://example.com/car1.jpg" alt="Car 1">
+            <img src="https://example.com/car2.jpg" alt="Car 2">
+            <img src="https://example.com/car3.jpg" alt="Car 3">
             <!-- Add more images as needed -->
         </div>
     </section>
