--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         }
 
         .album {
-            width: 300px; /* Adjust the width */
+            width: auto; /* Adjust the width */
             height: 300px; /* Adjust the height */
             overflow: hidden;
             border-radius: 8px;
@@ -178,6 +178,11 @@
             width: 100%;
             height: 100%;
             object-fit: cover; /* Ensures the images fill the box without stretching */
+        }
+
+        #albums h2 {
+            text-align: center;
+            font-size: 50px; /* Match the font size of Portfolio */
         }
 
 
@@ -374,7 +379,7 @@
     </style>
     <header>
         <a href="https://scaling-sniffle-v6g7g44j5wpqfp65w-8080.app.github.dev/">
-            <img src="/static/INTEC MEDIA1.png" alt="INTENCE MEDIA Logo">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738738526/INTEC_MEDIA1_famvag.png" alt="INTENCE MEDIA Logo">
         </a>
         <nav>
             <ul>
@@ -398,7 +403,7 @@
             <p>Every shot is captured with precision, focusing on the smallest details to bring out the best in every photo. Whether it's a car’s reflections, a portrait’s expression, or the atmosphere of an event, I make sure every image tells a story with clarity and style.</p>
         </div>
         <div class="info-image">
-            <img src="/static/GM SHOW (3).JPG" alt="Photography in action">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738712765/GM_SHOW_3_y2ykrq.jpg" alt="Photography in action">
         </div>
     </section>
 
