--- a/album_gmshow.html
+++ b/album_gmshow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GM Show Album- INTENCE MEDIA</title>
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="static/main.css">
 </head>
 <head>
     <style>
