changed homepage link

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         }
     </style>
     <header>
-        <a href="https://scaling-sniffle-v6g7g44j5wpqfp65w-8080.app.github.dev/">
+        <a href="https://ab23223.github.io/INTENCMEDIA/">
             <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738738526/INTEC_MEDIA1_famvag.png" alt="INTENCE MEDIA Logo">
         </a>
         <nav>
