--- a/album_gmshow.html
+++ b/album_gmshow.html
@@ -424,25 +424,25 @@
         <h2>GM Show Album</h2>
         <div class="album-images">
             <!-- Add images for the car album -->
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719568/GM_SHOW_13_ftmwgs.jpg" alt="Car 1" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719630/GM_SHOW_49_lde1ge.jpg" alt="Car 2" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_28_qhftgm.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_16_gesayy.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719610/GM_SHOW_18_rgfgfg.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_43_dgwi4p.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719608/GM_SHOW_20_vam9uh.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719608/GM_SHOW_30_iooyn6.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719533/GM_SHOW_10_v5srhg.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719535/GM_SHOW_11_oo4vq6.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719531/GM_SHOW_2_ccwmgk.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719532/GM_SHOW_7_zkimlp.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719532/GM_SHOW_9_jswj4t.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719531/GM_SHOW_6_eeilcr.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719531/GM_SHOW_3_zyyukq.jpg" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="" alt="Car 3" onclick="openFullscreen(this)">
-        <img src="" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719568/GM_SHOW_13_ftmwgs.jpg" alt="Car 1" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719630/GM_SHOW_49_lde1ge.jpg" alt="Car 2" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_28_qhftgm.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_16_gesayy.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719610/GM_SHOW_18_rgfgfg.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719609/GM_SHOW_43_dgwi4p.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719608/GM_SHOW_20_vam9uh.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719608/GM_SHOW_30_iooyn6.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719533/GM_SHOW_10_v5srhg.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719535/GM_SHOW_11_oo4vq6.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719531/GM_SHOW_2_ccwmgk.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719532/GM_SHOW_7_zkimlp.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719532/GM_SHOW_9_jswj4t.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719531/GM_SHOW_6_eeilcr.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="https://res.cloudinary.com/dfqreujbo/image/upload/v1738719531/GM_SHOW_3_zyyukq.jpg" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="" alt="Car 3" onclick="openFullscreen(this)">
+            <img src="" alt="Car 3" onclick="openFullscreen(this)">
 
 
             <!-- Add more images as needed -->
@@ -457,19 +457,38 @@
     </div>
 
     <script>
-        // Function to open the image in fullscreen mode
+        let currentIndex = 0;
+        let images = [];
+
         function openFullscreen(img) {
             var modal = document.getElementById("fullscreen-modal");
             var fullImg = document.getElementById("fullscreen-image");
             modal.style.display = "flex";
             fullImg.src = img.src;
+            images = document.querySelectorAll('#album-gallery img'); // Get all images
+            currentIndex = Array.from(images).indexOf(img); // Find the clicked image index
         }
 
-        // Function to close the fullscreen modal
         function closeFullscreen() {
             var modal = document.getElementById("fullscreen-modal");
             modal.style.display = "none";
         }
+
+        document.addEventListener('keydown', function(event) {
+        var modal = document.getElementById("fullscreen-modal");
+        if (modal.style.display === "flex") { // Only execute if modal is open
+            if (event.key === "ArrowLeft") {
+                currentIndex = (currentIndex > 0) ? currentIndex - 1 : images.length - 1; // Move left
+                document.getElementById("fullscreen-image").src = images[currentIndex].src;
+            }
+            if (event.key === "ArrowRight") {
+                currentIndex = (currentIndex < images.length - 1) ? currentIndex + 1 : 0; // Move right
+                document.getElementById("fullscreen-image").src = images[currentIndex].src;
+            }
+        }
+    });
+
+
     </script>
 </body>
 </html>
