--- a/album_gmshow.html
+++ b/album_gmshow.html
@@ -412,12 +412,12 @@
         </a>
         <nav>
             <ul>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#albums">Albums</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#portfolio">Portfolio</a></li>
+                <li><a href="index.html#albums">Albums</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#about">About</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#contact">Contact</a></li>
             </ul>
-        </nav>
+        </nav>        
     </header>
     
     <section id="album-gallery">
