--- a/album_gmshow.html
+++ b/album_gmshow.html
@@ -413,7 +413,7 @@
         <nav>
             <ul>
                 <li><a href="https://ab23223.github.io/INTENCMEDIA/#portfolio">Portfolio</a></li>
-                <li><a href="index.html#albums">Albums</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#albums">Albums</a></li>
                 <li><a href="https://ab23223.github.io/INTENCMEDIA/#about">About</a></li>
                 <li><a href="https://ab23223.github.io/INTENCMEDIA/#contact">Contact</a></li>
             </ul>
