--- a/album_vk.html
+++ b/album_vk.html
@@ -385,10 +385,10 @@
         </a>
         <nav>
             <ul>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#albums">Albums</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#portfolio">Portfolio</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#albums" target="_self">Albums</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#about">About</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
