--- a/album_car.html
+++ b/album_car.html
@@ -389,6 +389,7 @@
                 <li><a href="https://ab23223.github.io/INTENCMEDIA/#albums" target="_self">Albums</a></li>
                 <li><a href="https://ab23223.github.io/INTENCMEDIA/#about">About</a></li>
                 <li><a href="https://ab23223.github.io/INTENCMEDIA/#contact">Contact</a></li>
+                <li><a href="buy.html">Buy</a></li>
             </ul>
         </nav>
     </header>
