--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
                 <li><a href="#albums">Albums</a></li> <!-- Added Albums link -->
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="buy.html">Buy</a></li>
             </ul>
         </nav>
         
