--- a/buy.html
+++ b/buy.html
@@ -26,17 +26,17 @@
         <h2>Select Your Package</h2>
         <div class="pricing-grid">
             <div class="pricing-box" data-limit="1" data-name="1 Image" data-price="5">
-                <h3>1 Image</h3>
+                <h3>Basic Package</h3>
                 <p>$5</p>
                 <button class="select-package">Select</button>
             </div>
             <div class="pricing-box" data-limit="5" data-name="5 Images" data-price="20">
-                <h3>5 Images</h3>
+                <h3>Standard Package</h3>
                 <p>$20</p>
                 <button class="select-package">Select</button>
             </div>
             <div class="pricing-box" data-limit="10" data-name="10 Images" data-price="40">
-                <h3>10 Images</h3>
+                <h3>Ultimate Package</h3>
                 <p>$40</p>
                 <button class="select-package">Select</button>
             </div>
