removed stripe payment

--- a/success.html
+++ b/success.html
@@ -13,7 +13,7 @@
 
     <h2>Thank You for Your Purchase!</h2>
     <p>Your selected images will be available for download soon.</p>
-    <a href="index.html">Return to Home</a>
+    <a href="https://ab23223.github.io/INTENCMEDIA/">Return to Home</a>
 
 </body>
 </html>
