--- a/buy.html
+++ b/buy.html
@@ -27,19 +27,22 @@
         <div class="pricing-grid">
             <div class="pricing-box" data-limit="1" data-name="1 Image" data-price="5">
                 <h3>Basic Package</h3>
-                <p>$5</p>
+                <p class="package-info">1 Image</p> <!-- New paragraph for the number of images -->
+                <p class="price">$5</p>
                 <button class="select-package">Select</button>
             </div>
             <div class="pricing-box" data-limit="5" data-name="5 Images" data-price="20">
                 <h3>Standard Package</h3>
-                <p>$20</p>
+                <p class="package-info">5 Images</p>
+                <p class="price">$20</p>
                 <button class="select-package">Select</button>
             </div>
             <div class="pricing-box" data-limit="10" data-name="10 Images" data-price="40">
                 <h3>Ultimate Package</h3>
-                <p>$40</p>
+                <p class="package-info">10 Images</p>
+                <p class="price">$40</p>
                 <button class="select-package">Select</button>
-            </div>
+            </div>            
         </div>
     </section>
 
@@ -99,27 +102,38 @@
     </script>
 
     <style>
-        .pricing {
-            text-align: center;
-            padding: 50px;
-        }
-
-        .pricing-grid {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
-        }
-
         .pricing-box {
             background: white;
-            padding: 20px;
+            padding: 15px; /* Reduce padding to fit content better */
             border-radius: 10px;
             text-align: center;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 200px;
+            height: 180px; /* Adjust height to fit all content */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between; /* Distribute content evenly */
         }
 
+        .package-info {
+            font-size: 14px; /* Slightly smaller to fit better */
+            color: #666;
+            margin: 0; /* Remove extra spacing */
+            white-space: nowrap; /* Ensure it stays on one line */
+        }
+
+        .price {
+            font-size: 18px; /* Keep it readable but compact */
+            font-weight: bold;
+            color: #333;
+            margin: 5px 0;
+        }
+
+        .pricing {
+            text-align: center;
+            padding: 50px;
+        }
         .pricing-box button {
             background-color: #ff007f;
             color: white;
@@ -128,6 +142,14 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            margin-top: auto; /* Pushes the button to the bottom */
+        }
+
+        .pricing-grid {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
         }
 
         .pricing-box button:hover {
