--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
     <style>
+        .receipt {
+            flex: 1;
+            max-width: 400px;
+            padding: 20px;
+            border: 2px solid black;
+            background-color: white;
+            font-family: Arial, sans-serif;
+            text-align: left;
+        }
+        .receipt h3, .receipt h4 {
+            text-align: center;
+        }
+        .receipt p {
+            display: flex;
+            justify-content: space-between;
+        }
+        .receipt hr {
+            border: none;
+            border-top: 1px solid black;
+            margin: 10px 0;
+        }
+        #image-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        #image-list li {
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            padding: 5px 0;
+        }
+        #image-list img {
+            width: 50px;
+            height: 50px;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
         body { font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 20px; }
         header {
             background: white;
@@ -76,8 +113,9 @@
         .details h3 { margin-bottom: 10px; }
         .details p { margin: 5px 0; }
         #confirm-button {
-            width: 80%;
-            max-width: 300px;
+            margin-left: 150%;
+            width: 90%;
+            max-width: 400px;
             padding: 15px;
             background-color: #ff007f;
             color: white;
@@ -111,11 +149,17 @@
     <h2>Confirm Your Purchase</h2>
     <div class="checkout-container">
         <div class="image-grid" id="checkoutGrid"></div>
-        <div class="details">
+        <div class="receipt">
             <h3 id="packageName">Package Name: </h3>
+            <hr>
             <p><strong>Price:</strong> <span id="packagePrice">$0</span></p>
+            <hr>
             <p><strong>GST (10%):</strong> <span id="gst">$0</span></p>
+            <hr>
             <p><strong>Total:</strong> <span id="total">$0</span></p>
+            <hr>
+            <h4>Selected Images</h4>
+            <ul id="image-list"></ul>
         </div>
     </div>
     <form id="checkout-form">
