--- a/checkout.html
+++ b/checkout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
+    <link rel="stylesheet" href="static/main.css">
     <style>
         .receipt {
             flex: 1;
@@ -42,40 +43,46 @@
             border-radius: 5px;
             margin-right: 10px;
         }
-        body { font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 20px; }
+        body { font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 0px; }
         header {
             background: white;
+            color: white;
             padding: 20px;
             display: flex;
             align-items: center;
             justify-content: space-between;
             width: 97%;
-            height: 100px;
+            height: 100px; /* Adjust the height as needed */
             position: relative;
         }
+
         header img {
             max-width: 200px;
-            margin-left: 20px;
+            margin-left: 20px; /* Moves the logo to the left */
         }
+
         nav {
             position: absolute;
-            top: 50%;
+            top: 50%; /* Moves the navigation to the middle */
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); /* Centers it horizontally and vertically */
         }
+
         nav ul {
             list-style: none;
             padding: 0;
             margin: 0;
         }
+
         nav ul li {
             display: inline;
             margin: 0 20px;
         }
+
         nav ul li a {
             color: black;
             text-decoration: none;
-            font-size: 35px;
+            font-size: 35px; /* Keeps the font size large */
             font-weight: bold;
             font-family: 'Timmana';
         }
@@ -94,15 +101,22 @@
             max-width: 50%;
         }
         .image-box {
+            width: 100%;
+            height: 150px; /* Ensures all images take up the same height */
             display: flex;
+            align-items: center;
             justify-content: center;
+            overflow: hidden; /* Prevents any unwanted overflow */
         }
+
         .image-box img {
             width: 100%;
-            height: auto;
+            height: 100%;
+            object-fit: cover; /* Ensures images fill the space without stretching */
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
         .details {
             flex: 1;
             padding: 20px;
@@ -112,6 +126,7 @@
         }
         .details h3 { margin-bottom: 10px; }
         .details p { margin: 5px 0; }
+        
         #confirm-button {
             margin-left: 150%;
             width: 90%;
@@ -170,6 +185,7 @@
         <input type="hidden" name="selectedImages" id="hiddenImages">
         <button id="confirm-button" type="submit">Confirm Purchase</button>
     </form>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const checkoutForm = document.getElementById("checkout-form");
@@ -182,7 +198,16 @@
                 selectedImages.forEach(src => {
                     let imgBox = document.createElement("div");
                     imgBox.classList.add("image-box");
-                    imgBox.innerHTML = `<img src="${src}" width="150">`;
+                    
+                    let img = document.createElement("img");
+                    img.src = src;
+                    img.onload = function () {
+                        // Calculate aspect ratio dynamically
+                        const aspectRatio = this.naturalWidth / this.naturalHeight;
+                        imgBox.style.height = `${imgBox.offsetWidth / aspectRatio}px`; // Set the height based on the width
+                    };
+
+                    imgBox.appendChild(img);
                     checkoutGrid.appendChild(imgBox);
                 });
             }
