--- a/checkout.html
+++ b/checkout.html
@@ -45,6 +45,7 @@
         }
         body { font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 0px; }
         header {
+            margin-top: 0px;
             background: white;
             color: white;
             padding: 20px;
@@ -93,29 +94,36 @@
             gap: 20px;
             margin-bottom: 20px;
         }
+        /* Masonry Grid Setup */
         .image-grid {
-            flex: 1;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            gap: 10px;
-            max-width: 50%;
-        }
-        .image-box {
-            width: 100%;
-            height: 150px; /* Ensures all images take up the same height */
             display: flex;
-            align-items: center;
             justify-content: center;
-            overflow: hidden; /* Prevents any unwanted overflow */
+            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+            gap: 10px;
+            flex-wrap: wrap;
+            max-width: 65%; /* Limit width of the image grid */
+        }
+
+        .image-box {
+            width: auto; /* Adjust width based on image aspect ratio */
+            height: 200px; /* Set fixed height */
+            overflow: hidden;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .image-box:hover {
+            transform: scale(1.05); /* Zoom effect on hover */
         }
 
         .image-box img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Ensures images fill the space without stretching */
+            max-width: 90%;
+            max-height: 90%;
+            object-fit: cover; /* Makes sure images fill the box without stretching */
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
 
         .details {
             flex: 1;
@@ -128,7 +136,7 @@
         .details p { margin: 5px 0; }
         
         #confirm-button {
-            margin-left: 150%;
+            margin-left: 250%;
             width: 90%;
             max-width: 400px;
             padding: 15px;
