--- a/checkout.html
+++ b/checkout.html
@@ -43,7 +43,13 @@
             border-radius: 5px;
             margin-right: 10px;
         }
-        body { font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 0px; }
+        body { font-family: Arial, sans-serif; 
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            padding: 0px;
+            margin: 0px 
+        }
         header {
             margin-top: 0px;
             background: white;
@@ -96,6 +102,9 @@
         }
         /* Masonry Grid Setup */
         .image-grid {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
             display: flex;
             justify-content: center;
             grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
