--- a/album_car.html
+++ b/album_car.html
@@ -404,5 +404,46 @@
             <!-- Add more images as needed -->
         </div>
     </section>
+    <script>
+                let currentIndex = 0;
+        let images = [];
+
+        function openFullscreen(img) {
+            var modal = document.getElementById("fullscreen-modal");
+            var fullImg = document.getElementById("fullscreen-image");
+
+            if (modal && fullImg) {
+                fullImg.src = img.src;
+                modal.style.display = "flex";
+                images = document.querySelectorAll("#album-gallery img"); // Get all images
+                currentIndex = Array.from(images).indexOf(img); // Find the clicked image index
+            }
+        }
+        document.getElementById("fullscreen-modal").addEventListener("click", function(event) {
+            if (event.target === this) {
+                closeFullscreen();
+            }
+        });
+
+
+        function closeFullscreen() {
+            var modal = document.getElementById("fullscreen-modal");
+            modal.style.display = "none";
+        }
+
+        document.addEventListener('keydown', function(event) {
+        var modal = document.getElementById("fullscreen-modal");
+        if (modal.style.display === "flex") { // Only execute if modal is open
+            if (event.key === "ArrowLeft") {
+                currentIndex = (currentIndex > 0) ? currentIndex - 1 : images.length - 1; // Move left
+                document.getElementById("fullscreen-image").src = images[currentIndex].src;
+            }
+            if (event.key === "ArrowRight") {
+                currentIndex = (currentIndex < images.length - 1) ? currentIndex + 1 : 0; // Move right
+                document.getElementById("fullscreen-image").src = images[currentIndex].src;
+            }
+        }
+    });
+    </script>
 </body>
 </html>
