--- a/album_gmshow.html
+++ b/album_gmshow.html
@@ -464,11 +464,20 @@
         function openFullscreen(img) {
             var modal = document.getElementById("fullscreen-modal");
             var fullImg = document.getElementById("fullscreen-image");
-            modal.style.display = "flex";
-            fullImg.src = img.src;
-            images = document.querySelectorAll('#album-gallery img'); // Get all images
-            currentIndex = Array.from(images).indexOf(img); // Find the clicked image index
+
+            if (modal && fullImg) {
+                fullImg.src = img.src;
+                modal.style.display = "flex";
+                images = document.querySelectorAll("#album-gallery img"); // Get all images
+                currentIndex = Array.from(images).indexOf(img); // Find the clicked image index
+            }
         }
+        document.getElementById("fullscreen-modal").addEventListener("click", function(event) {
+            if (event.target === this) {
+                closeFullscreen();
+            }
+        });
+
 
         function closeFullscreen() {
             var modal = document.getElementById("fullscreen-modal");
@@ -487,6 +496,7 @@
                 document.getElementById("fullscreen-image").src = images[currentIndex].src;
             }
         }
+    });
         
         document.addEventListener("DOMContentLoaded", function() {
             const links = {
