now it is better

--- a/buy.html
+++ b/buy.html
@@ -13,10 +13,10 @@
         </a>
         <nav>
             <ul>
-                <li><a href="index.html#portfolio">Portfolio</a></li>
-                <li><a href="index.html#albums">Albums</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#portfolio">Portfolio</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#albums">Albums</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#about">About</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#contact">Contact</a></li>
                 <li><a href="cart.html">🛒 Cart (<span id="cart-count">0</span>)</a></li>
             </ul>
         </nav>
