--- a/checkout.html
+++ b/checkout.html
@@ -8,6 +8,7 @@
     <style>
         .receipt {
             flex: 1;
+            flex: 0 0 400px; /* Fixed width for the receipt */
             max-width: 400px;
             padding: 20px;
             border: 2px solid black;
@@ -94,6 +95,7 @@
             font-family: 'Timmana';
         }
         .checkout-container {
+            justify-content: space-between; /* Places images on the left and receipt on the right */
             width: 80%;
             max-width: 1200px;
             display: flex;
@@ -102,6 +104,7 @@
         }
         /* Masonry Grid Setup */
         .image-grid {
+            flex: 1; /* Allow image grid to take the remaining space */
             display: flex;
             justify-content: center;
             grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
@@ -141,10 +144,9 @@
         .details h3 { margin-bottom: 10px; }
         .details p { margin: 5px 0; }
         
+                
         #confirm-button {
-            margin-left: 250%;
-            width: 90%;
-            max-width: 400px;
+            width: 100%; /* Make the button take the full width of the receipt */
             padding: 15px;
             background-color: #ff007f;
             color: white;
@@ -154,6 +156,7 @@
             cursor: pointer;
             text-align: center;
         }
+
         #confirm-button:hover {
             background-color: #d6006a;
             transform: scale(1.05);
@@ -167,10 +170,10 @@
         </a>
         <nav>
             <ul>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#albums">Albums</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#portfolio">Portfolio</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#albums">Albums</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#about">About</a></li>
+                <li><a href="https://ab23223.github.io/INTENCMEDIA/#contact">Contact</a></li>
                 <li><a href="buy.html">Buy</a></li>
             </ul>
         </nav>
